编码问题:idea换回UTF-8,修改对应的pom。

--- a/springBoot/pom.xml
+++ b/springBoot/pom.xml
@@ -7,11 +7,9 @@
         <artifactId>javaLearnCode</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.learnCode.lh</groupId>
-    <artifactId>algorithm</artifactId>
+    <artifactId>springBoot</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
