--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <groupId>com.learnCode.lh</groupId>
-        <artifactId>javaLearnCode</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.learnCode.lh</groupId>
-    <artifactId>algorithm</artifactId>
+    <artifactId>javaLearnCode</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <modules>
+        <module>springBoot</module>
+        <module>algorithm</module>
+    </modules>
+
+    <packaging>pom</packaging>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 
 </project>
