--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.learnCode.lh</groupId>
+        <groupId>com.lh</groupId>
         <artifactId>javaLearnCode</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.learnCode.lh</groupId>
+    <groupId>com.lh</groupId>
     <artifactId>algorithm</artifactId>
     <version>1.0-SNAPSHOT</version>
 
